<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TennisViewController" customModule="Tennis" customModuleProvider="target">
            <connections>
                <outlet property="gameScore" destination="xe8-xD-bjV" id="38L-NN-h7c"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cvf-6C-MjF" userLabel="firstPlayerView">
                    <rect key="frame" x="16" y="151" width="167.5" height="137"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXu-Ay-KDi">
                            <rect key="frame" x="16" y="79" width="135.5" height="30"/>
                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <accessibility key="accessibilityConfiguration" identifier="player1Scores"/>
                            <state key="normal" title="Score">
                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="firstPlayerScores:" destination="-1" eventType="touchUpInside" id="6hf-NG-0r2"/>
                            </connections>
                        </button>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WHl-2i-fvc">
                            <rect key="frame" x="16" y="29" width="135.5" height="19.5"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="19.5" id="hEF-qW-fMb"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
                    <color key="backgroundColor" red="0.1854660809" green="0.41260284190000002" blue="0.30192983150000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstItem="WHl-2i-fvc" firstAttribute="leading" secondItem="Cvf-6C-MjF" secondAttribute="leading" constant="16" id="82L-Vv-N2f"/>
                        <constraint firstItem="dXu-Ay-KDi" firstAttribute="width" secondItem="WHl-2i-fvc" secondAttribute="width" id="H11-bS-Dk0"/>
                        <constraint firstAttribute="trailing" secondItem="WHl-2i-fvc" secondAttribute="trailing" constant="16" id="Krs-dj-bdF"/>
                        <constraint firstAttribute="height" constant="137" id="YjC-wZ-a1B"/>
                        <constraint firstItem="dXu-Ay-KDi" firstAttribute="leading" secondItem="Cvf-6C-MjF" secondAttribute="leading" constant="16" id="mfh-Oo-OCT"/>
                        <constraint firstItem="dXu-Ay-KDi" firstAttribute="top" secondItem="WHl-2i-fvc" secondAttribute="bottom" constant="30.5" id="nhL-wH-Mws"/>
                    </constraints>
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRT-sV-cgo" userLabel="secondPlayerView">
                    <rect key="frame" x="191.5" y="151" width="167.5" height="137"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhl-vy-VcF">
                            <rect key="frame" x="16" y="77" width="135.5" height="30"/>
                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <accessibility key="accessibilityConfiguration" identifier="player2Scores"/>
                            <state key="normal" title="Score">
                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="secondPlayerScores:" destination="-1" eventType="touchUpInside" id="7m9-Sd-FZm"/>
                            </connections>
                        </button>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second Player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WJ4-G3-WTZ">
                            <rect key="frame" x="16" y="28" width="135.5" height="21"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="21" id="oG5-ZH-Ese"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
                    <color key="backgroundColor" red="0.1854660809" green="0.41260284190000002" blue="0.30192983150000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstItem="vhl-vy-VcF" firstAttribute="width" secondItem="WJ4-G3-WTZ" secondAttribute="width" id="Age-NA-n7L"/>
                        <constraint firstItem="WJ4-G3-WTZ" firstAttribute="top" secondItem="xRT-sV-cgo" secondAttribute="top" constant="28" id="CgA-WO-gYc"/>
                        <constraint firstItem="WJ4-G3-WTZ" firstAttribute="leading" secondItem="xRT-sV-cgo" secondAttribute="leading" constant="16" id="OBc-bq-1xH"/>
                        <constraint firstItem="vhl-vy-VcF" firstAttribute="top" secondItem="WJ4-G3-WTZ" secondAttribute="bottom" constant="28" id="e6f-LC-5RW"/>
                        <constraint firstAttribute="trailing" secondItem="WJ4-G3-WTZ" secondAttribute="trailing" constant="16" id="f5p-fx-KP9"/>
                        <constraint firstItem="vhl-vy-VcF" firstAttribute="leading" secondItem="xRT-sV-cgo" secondAttribute="leading" constant="16" id="lTP-kh-nGU"/>
                    </constraints>
                </view>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Love All" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xe8-xD-bjV">
                    <rect key="frame" x="16" y="336" width="343" height="21"/>
                    <accessibility key="accessibilityConfiguration" identifier="Scores"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="USg-Re-TCA"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cd4-BH-nW2">
                    <rect key="frame" x="309" y="34" width="50" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="restart"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="50" id="WYP-ct-6qL"/>
                        <constraint firstAttribute="height" constant="30" id="kn0-EH-8ti"/>
                    </constraints>
                    <state key="normal" title="Restart"/>
                    <connections>
                        <action selector="restartGame:" destination="-1" eventType="touchUpInside" id="qBa-6Y-2Dp"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="xe8-xD-bjV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="5YW-I6-iQv"/>
                <constraint firstItem="WHl-2i-fvc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="160" id="61h-mq-FZz"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xRT-sV-cgo" secondAttribute="trailing" constant="16" id="6HY-tZ-hg0"/>
                <constraint firstItem="xRT-sV-cgo" firstAttribute="firstBaseline" secondItem="Cvf-6C-MjF" secondAttribute="firstBaseline" id="7Y4-ab-2cc"/>
                <constraint firstItem="Cvf-6C-MjF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Vbu-Lq-o8o"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Cd4-BH-nW2" secondAttribute="trailing" constant="16" id="bAX-zN-La1"/>
                <constraint firstItem="Cvf-6C-MjF" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="131" id="bNy-z7-4rB"/>
                <constraint firstItem="Cd4-BH-nW2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="14" id="gha-md-na4"/>
                <constraint firstItem="xRT-sV-cgo" firstAttribute="height" secondItem="Cvf-6C-MjF" secondAttribute="height" id="iMw-a0-j7Y"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xe8-xD-bjV" secondAttribute="trailing" constant="16" id="jMs-eR-Gc5"/>
                <constraint firstItem="xe8-xD-bjV" firstAttribute="top" secondItem="Cvf-6C-MjF" secondAttribute="bottom" constant="48" id="uwi-xT-jxR"/>
                <constraint firstItem="xRT-sV-cgo" firstAttribute="leading" secondItem="Cvf-6C-MjF" secondAttribute="trailing" constant="8" id="wp9-gk-0hc"/>
                <constraint firstItem="Cvf-6C-MjF" firstAttribute="width" secondItem="xRT-sV-cgo" secondAttribute="width" id="xOA-Bk-2ti"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="138.40000000000001" y="152.47376311844079"/>
        </view>
    </objects>
</document>
